--- a/style.css
+++ b/style.css
@@ -1,51 +1,119 @@
-.nav {
-    height: 75px;
-    width: 100%;
-    background-color: #111111;
+body {
+    box-sizing: border-box;
+    font-size: 14px;
+    font-family: Helvetica, sans-serif;
+    position: relative;
 }
 
-.top-links {
+nav {
+    height: 75px;
+    width: 100vw;
+    background-color: #111111;
+    position: fixed;
+    top: 0;
+    display: inline-flex;
+    justify-content: center;
+    align-items: baseline;
+    z-index: 2;
+    flex-wrap: wrap;
+}
+
+a {
+    text-decoration: none;
+}
+
+.logo {
+    max-width: 180px;
+    max-height: 22px;
+    padding: 10px;
+}
+.nav-container-1 {
     display:flex;
     justify-content: center;
 }
-
-.top-links {
-
+.nav-container-2 {
+    padding: 30px 0 0 100px;
 }
-.spacex-logo {
-
+.nav-links-1 {
+    text-decoration: none;
+    font-weight: 400;
+    color: white;
+    padding: 10px;
 }
-.top-links {
-
-}
-.top-links {
-
-}
-.small-links {
-    font-family: Helvetica;
-    font-size: 10;
+.nav-links-2 {
+    text-decoration: none;
+    font-weight: 700;
+    font-size: .85rem;
+    color: #888888;
 }
 
-.med-links {
-    font-family: Helvetica;
-    font-size: 12;
-}
-li {
-    display: inline;
-}
-
-.text-grey {
-    color: #666666
-}
-.text-white {
-    color: #dddddd
+.main-image-container {
+    z-index: 1;
+    width: 100%;
+    height: 90vh;
+    max-height: 1400px;
+    position: relative;
+    background-image: url("https://www.spacex.com/sites/spacex/files/star6_streak.jpg");
+    background-position: center;
+    background-size: cover; 
 }
 
-.image {
-    max-width: 100%;
-    height: 400px;
+.main-image-desc {
+    width: 100%;
+    height: 100px;
+    background-color: rgba(0, 0, 0, .75);
+    position: absolute;
+    display: flex;
+    bottom: 70px;
+    align-items: center;
+    justify-content: space-around;
 }
 
+.main-image-desc-link {
+    text-decoration: none;
+    color: white;
+    font-size: 2rem;
+    font-weight: 700;
+}
+
+.main-image-replay {
+    height: 40px;
+    width: 150 px;
+    background-color: white;
+    font-size: .8rem;
+    font-weight: 700;
+    border-radius: 3px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.main-image-links {
+    width: 100%;
+    height: 75px;
+    position: absolute;
+    bottom: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: rgba(0, 0, 0, .75);
+}
+
+.main-image-selection {
+    height: 100%;
+    width: 28%;
+    color: white;
+    background-color: #222222;
+    display: flex;
+    align-items: center;
+    padding-left: 15px;
+}
+
+.white-content {
+    height 50vh;
+    width: 100%;
+    background-color: white;
+}
 
 footer {
     height: 50px;
@@ -55,11 +123,29 @@ footer {
     right: 0;
     bottom: 0;
     position: absolute;
-    font-family: Helvetica;
     display: flex;
+    align-items: center;
     justify-content: center;
+    flex-wrap: wrap;
+}
+
+.foot-logo {
+    width: 95px;
+    height: 12px;
+}
+.foot-link {
+    color: white;
+    padding: 3px 10px;
+    font-size: .8rem;
+    font-weight: 300;
+}
+.foot-divider, .foot-copyright {
+    color #666666;
+    font-size: .8rem;
+    padding: 3px 10px;
+
 }
 
 .foot-copyright {
-    color: #666666
+    margin-left: 100px;
 }
