--- a/style.css
+++ b/style.css
@@ -26,13 +26,17 @@ a {
     max-width: 180px;
     max-height: 22px;
     padding: 10px;
+    margin-top: 10px;
+    display: flex;
+    align-items: baseline;
 }
 .nav-container-1 {
     display:flex;
     justify-content: center;
+    padding: 20px 0 0 50px;
 }
 .nav-container-2 {
-    padding: 30px 0 0 100px;
+    padding: 20px 0 0 100px;
 }
 .nav-links-1 {
     text-decoration: none;
@@ -50,7 +54,7 @@ a {
 .main-image-container {
     z-index: 1;
     width: 100%;
-    height: 90vh;
+    height: 80vh;
     max-height: 1400px;
     position: relative;
     background-image: url("https://www.spacex.com/sites/spacex/files/star6_streak.jpg");
@@ -82,6 +86,7 @@ a {
     background-color: white;
     font-size: .8rem;
     font-weight: 700;
+    text-decoration: none;
     border-radius: 3px;
     display: flex;
     justify-content: center;
